external-crates/move/crates/move-compiler/tests/move_check/expansion/type_arguments_on_field_access.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/type_arguments_on_field_access.move:6:17
  │
6 │         x.f<u64>;
  │                 ^
  │                 │
  │                 Unexpected ';'
  │                 Expected '('

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/type_arguments_on_field_access.move:6:17
  │
6 │         x.f<u64>;
  │                 ^
  │                 │
  │                 Unexpected ';'
  │                 Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

