external-crates/move/crates/move-compiler/tests/move_check/expansion/type_arguments_on_field_access.move
module 0x42::M {
    struct X<phantom T> {}
    struct S { f: X<u64> }
    fun foo() {
        let x = S { f: X{} };
        x.f<u64>;
    }
}
